Refactor: tipo de fuente

--- a/index.html
+++ b/index.html
@@ -9,26 +9,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Inter:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Inter:wght@500;bold&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      integrity="sha384-dyB6PEh0e62eVDnGNLr32/j6fpqqon3hvz1kZg2RwhCr6d2tKIbL9eOFhG8c0nKA"
-      crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"
-      integrity="sha384-RBXQAM1c/x0hb6UusjeCB51CDjSDIqU6TztSCVuTg8HPLQx2hUsqUbSCU/tZpIvb"
-      crossorigin="anonymous"
     ></script>
-    <script defer src="script.js" type="module"></script>
 
+    <script src="script.js" type="module"></script>
     <script>
       // (function () {
       const userTheme = localStorage.getItem("theme"),
