Style: se agrego en el HTML el atributo loading="lazy"

--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
             src="assets/fer-cv.avif"
             alt="Fernando Sosa"
             title="Programador"
+            loading="lazy"
           />
           <div class="about-text">
             <h2 class="title-second" data-section="sombreMi" data-value="h2">
