Style: se agrego texto a iconos de habilidades y agrego backend

--- a/index.html
+++ b/index.html
@@ -344,20 +344,137 @@
       <section id="habilidades" class="skills" data-scroll-spy>
         <div class="skills-container container">
           <div class="skills-box">
-            <h2
-              class="title-second"
-              data-section="habilidades"
-              data-value="skill"
-            >
-              SKILLS
-            </h2>
+            <!-- class="title-second"
+            data-section="habilidades"
+            data-value="skill" -->
+            <h2 class="title-second">FRONTEND</h2>
             <div class="skills-item">
-              <img src="assets/leng-html.svg" alt="html" title="HTML" />
+              <div class="box-icon">
+                <img
+                  src="assets/skill/front-html.svg"
+                  alt="html"
+                  title="html"
+                />
+                <img
+                  src="assets/skill/front-html-text.svg"
+                  alt="html"
+                  title="HTML"
+                />
+              </div>
+              <div class="box-icon">
+                <img src="assets/skill/front-css.svg" alt="css" title="CSS" />
+                <img
+                  src="assets/skill/front-css-text.svg"
+                  alt="css"
+                  title="CSS"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/front-js.svg"
+                  alt="JavaScript"
+                  title="JavaScript"
+                />
+                <img
+                  src="assets/skill/front-js-text.svg"
+                  alt="JavaScript"
+                  title="JavaScript"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/front-ts.svg"
+                  alt="TypeScript"
+                  title="TypeScript"
+                />
+                <img
+                  src="assets/skill/front-ts-text.svg"
+                  alt="TypeScript"
+                  title="TypeScript"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/front-react.svg"
+                  alt="react"
+                  title="react"
+                />
+                <img
+                  src="assets/skill/front-react-text.svg"
+                  alt="react"
+                  title="React"
+                />
+              </div>
+              <!-- <img src="assets/leng-html.svg" alt="html" title="HTML" />
               <img src="assets/leng-css.svg" alt="css" title="CSS" />
               <img src="assets/leng-js.svg" alt="js" title="JavaScript" />
               <img src="assets/leng-ts.svg" alt="ts" title="TypeScript" />
-              <img src="assets/leng-react.svg" alt="react" title="React" />
-              <img src="assets/int-node.svg" alt="node" title="Node.js" />
+              <img src="assets/leng-react.svg" alt="react" title="React" /> -->
+            </div>
+          </div>
+          <div class="skills-box">
+            <h2 class="title-second">BACKEND</h2>
+            <div class="skills-item">
+              <div class="box-icon">
+                <img
+                  src="assets/skill/back-nodejs.svg"
+                  alt="node"
+                  title="Node.js"
+                />
+                <img
+                  src="assets/skill/back-nodejs-text.svg"
+                  alt="node"
+                  title="Node.js"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/back-express.svg"
+                  alt="express"
+                  title="Express"
+                />
+                <img
+                  src="assets/skill/back-express-text.svg"
+                  alt="express"
+                  title="Express"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/back-mysql.svg"
+                  alt="MySQL"
+                  title="MySQL"
+                />
+                <img
+                  src="assets/skill/back-mysql-text.svg"
+                  alt="MySQL"
+                  title="MySQL"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/back-sqlite.svg"
+                  alt="SQLite"
+                  title="SQLite"
+                />
+                <img
+                  src="assets/skill/back-sqlite-text.svg"
+                  alt="SQLite"
+                  title="SQLite"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/back-mongodb.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/back-mongodb-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
             </div>
           </div>
           <div class="skills-box">
@@ -369,26 +486,122 @@
               TOOLS
             </h2>
             <div class="skills-item herramie">
-              <img
-                src="assets/herr-terminal.svg"
+              <div class="box-icon">
+                <img
+                  src="assets/skill/herr-terminal.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/herr-terminal-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/herr-git.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/herr-git-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/herr-github.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/herr-github-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/herr-npm.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/herr-npm-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/herr-vite.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/herr-vite-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/herr-figma.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/herr-figma-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/herr-illustrator.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/herr-illustrator-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
+              <div class="box-icon">
+                <img
+                  src="assets/skill/herr-photoshop.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+                <img
+                  src="assets/skill/herr-photoshop-text.svg"
+                  alt="MongoDB"
+                  title="MongoDB"
+                />
+              </div>
+              <!-- <img
+                src="assets/skill/herr-terminal.svg"
                 alt="terminal"
                 title="terminal"
               />
-              <img src="assets/herr-git.svg" alt="git" title="Git" />
-              <img src="assets/herr-github.svg" alt="github" title="GitHub" />
-              <img src="assets/herr-npm.svg" alt="npm" title="npm" />
-              <img src="assets/herr-vite.svg" alt="vite" title="Vite" />
-              <img src="assets/herr-figma.svg" alt="figma" title="Figma" />
+              <img src="assets/skill/herr-git.svg" alt="git" title="Git" />
+              <img src="assets/skill/herr-github.svg" alt="github" title="GitHub" />
+              <img src="assets/skill/herr-npm.svg" alt="npm" title="npm" />
+              <img src="assets/skill/herr-vite.svg" alt="vite" title="Vite" />
+              <img src="assets/skill/herr-figma.svg" alt="figma" title="Figma" />
               <img
-                src="assets/herr-illustrator.svg"
+                src="assets/skill/herr-illustrator.svg"
                 alt="illustrator"
                 title="Illustrator"
               />
               <img
-                src="assets/herr-photoshop.svg"
+                src="assets/skill/herr-photoshop.svg"
                 alt="photoshop"
                 title="Photoshop"
-              />
+              /> -->
             </div>
           </div>
         </div>
