Style: animaciones/saco title/oscureció tarjeta de proyectos

--- a/index.html
+++ b/index.html
@@ -373,60 +373,24 @@
             <h2 class="title-second">FRONTEND</h2>
             <div class="skills-item">
               <div class="box-icon">
-                <img
-                  src="assets/skill/front-html.svg"
-                  alt="html"
-                  title="html"
-                />
-                <img
-                  src="assets/skill/front-html-text.svg"
-                  alt="html"
-                  title="HTML"
-                />
+                <img src="assets/skill/front-html.svg" alt="html" />
+                <img src="assets/skill/front-html-text.svg" alt="html" />
               </div>
               <div class="box-icon">
-                <img src="assets/skill/front-css.svg" alt="css" title="CSS" />
-                <img
-                  src="assets/skill/front-css-text.svg"
-                  alt="css"
-                  title="CSS"
-                />
+                <img src="assets/skill/front-css.svg" alt="css" />
+                <img src="assets/skill/front-css-text.svg" alt="css" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/front-js.svg"
-                  alt="JavaScript"
-                  title="JavaScript"
-                />
-                <img
-                  src="assets/skill/front-js-text.svg"
-                  alt="JavaScript"
-                  title="JavaScript"
-                />
+                <img src="assets/skill/front-js.svg" alt="JavaScript" />
+                <img src="assets/skill/front-js-text.svg" alt="JavaScript" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/front-ts.svg"
-                  alt="TypeScript"
-                  title="TypeScript"
-                />
-                <img
-                  src="assets/skill/front-ts-text.svg"
-                  alt="TypeScript"
-                  title="TypeScript"
-                />
+                <img src="assets/skill/front-ts.svg" alt="TypeScript" />
+                <img src="assets/skill/front-ts-text.svg" alt="TypeScript" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/front-react.svg"
-                  alt="react"
-                  title="react"
-                />
-                <img
-                  src="assets/skill/front-react-text.svg"
-                  alt="react"
-                  title="React"
-                />
+                <img src="assets/skill/front-react.svg" alt="react" />
+                <img src="assets/skill/front-react-text.svg" alt="react" />
               </div>
             </div>
           </div>
@@ -434,64 +398,24 @@
             <h2 class="title-second">BACKEND</h2>
             <div class="skills-item">
               <div class="box-icon">
-                <img
-                  src="assets/skill/back-nodejs.svg"
-                  alt="node"
-                  title="Node.js"
-                />
-                <img
-                  src="assets/skill/back-nodejs-text.svg"
-                  alt="node"
-                  title="Node.js"
-                />
+                <img src="assets/skill/back-nodejs.svg" alt="node" js" /> <img
+                src="assets/skill/back-nodejs-text.svg" alt="node" js" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/back-express.svg"
-                  alt="express"
-                  title="Express"
-                />
-                <img
-                  src="assets/skill/back-express-text.svg"
-                  alt="express"
-                  title="Express"
-                />
+                <img src="assets/skill/back-express.svg" alt="express" />
+                <img src="assets/skill/back-express-text.svg" alt="express" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/back-mysql.svg"
-                  alt="MySQL"
-                  title="MySQL"
-                />
-                <img
-                  src="assets/skill/back-mysql-text.svg"
-                  alt="MySQL"
-                  title="MySQL"
-                />
+                <img src="assets/skill/back-mysql.svg" alt="MySQL" />
+                <img src="assets/skill/back-mysql-text.svg" alt="MySQL" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/back-sqlite.svg"
-                  alt="SQLite"
-                  title="SQLite"
-                />
-                <img
-                  src="assets/skill/back-sqlite-text.svg"
-                  alt="SQLite"
-                  title="SQLite"
-                />
+                <img src="assets/skill/back-sqlite.svg" alt="SQLite" />
+                <img src="assets/skill/back-sqlite-text.svg" alt="SQLite" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/back-mongodb.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
-                <img
-                  src="assets/skill/back-mongodb-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
+                <img src="assets/skill/back-mongodb.svg" alt="MongoDB" />
+                <img src="assets/skill/back-mongodb-text.svg" alt="MongoDB" />
               </div>
             </div>
           </div>
@@ -505,99 +429,44 @@
             </h2>
             <div class="skills-item herramie">
               <div class="box-icon">
-                <img
-                  src="assets/skill/herr-terminal.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
-                <img
-                  src="assets/skill/herr-terminal-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
+                <img src="assets/skill/herr-terminal.svg" alt="terminal" />
+                <img src="assets/skill/herr-terminal-text.svg" alt="terminal" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/herr-git.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
-                <img
-                  src="assets/skill/herr-git-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
+                <img src="assets/skill/herr-git.svg" alt="git" />
+                <img src="assets/skill/herr-git-text.svg" alt="git" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/herr-github.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
-                <img
-                  src="assets/skill/herr-github-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
+                <img src="assets/skill/herr-github.svg" alt="github" />
+                <img src="assets/skill/herr-github-text.svg" alt="github" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/herr-npm.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
-                <img
-                  src="assets/skill/herr-npm-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
+                <img src="assets/skill/herr-npm.svg" alt="npm" />
+                <img src="assets/skill/herr-npm-text.svg" alt="npm" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/herr-vite.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
-                <img
-                  src="assets/skill/herr-vite-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
+                <img src="assets/skill/herr-vite.svg" alt="vite" />
+                <img src="assets/skill/herr-vite-text.svg" alt="vite" />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/herr-figma.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
-                <img
-                  src="assets/skill/herr-figma-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
+                <img src="assets/skill/herr-figma.svg" alt="figma" />
+                <img src="assets/skill/herr-figma-text.svg" alt="figma" />
               </div>
               <div class="box-icon">
                 <img
                   src="assets/skill/herr-illustrator.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
+                  alt="illustrator"
                 />
                 <img
                   src="assets/skill/herr-illustrator-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
+                  alt="illustrator"
                 />
               </div>
               <div class="box-icon">
-                <img
-                  src="assets/skill/herr-photoshop.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
-                />
+                <img src="assets/skill/herr-photoshop.svg" alt="photoshop" />
                 <img
                   src="assets/skill/herr-photoshop-text.svg"
-                  alt="MongoDB"
-                  title="MongoDB"
+                  alt="photoshop"
                 />
               </div>
             </div>
