--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
       <section id="habilidades" class="skills" data-scroll-spy>
         <div class="skills-container container">
-          <div class="skills-box">
+          <div class="skills-box front-ent">
             <h2 class="title-second">FRONTEND</h2>
             <div class="skills-item">
               <div class="box-icon">
@@ -394,7 +394,7 @@
               </div>
             </div>
           </div>
-          <div class="skills-box">
+          <div class="skills-box back-ent">
             <h2 class="title-second">BACKEND</h2>
             <div class="skills-item">
               <div class="box-icon">
@@ -419,7 +419,7 @@
               </div>
             </div>
           </div>
-          <div class="skills-box">
+          <div class="skills-box herramientas">
             <h2
               class="title-second"
               data-section="habilidades"
@@ -480,62 +480,7 @@
         </h2>
         <div class="proyecto-container">
           <section class="proyecto-page">
-            <div class="box-img">
-              <a
-                class="link-title"
-                href="https://fergsosa.github.io/Slider-Efectos-Series/"
-                target="_blank"
-              >
-                <b data-section="proyecto" data-value="title-1"
-                  >Slider Effect</b
-                >
-                <p data-section="proyecto" data-value="p-1">
-                  Slider details/automatic <span>HTML | CSS | JS</span>
-                </p>
-              </a>
-            </div>
-            <div class="box-img">
-              <a
-                class="link-title"
-                href="https://fergsosa.github.io/Incluir-html-AJAX/"
-                target="_blank"
-              >
-                <b data-section="proyecto" data-value="title-2">Simple Page</b>
-
-                <p data-section="proyecto" data-value="p-2">
-                  Integrating HTML with AJAX <span>HTML | CSS | JS</span>
-                </p>
-              </a>
-            </div>
-            <div class="box-img">
-              <a
-                class="link-title"
-                href="https://fergsosa.github.io/react-app-tarjeta_de_compra/"
-                target="_blank"
-              >
-                <b data-section="proyecto" data-value="title-3"
-                  >Shopping cart</b
-                >
-
-                <p data-section="proyecto" data-value="p-3">
-                  Loading product cart <span> React | Tailwind </span>
-                </p>
-              </a>
-            </div>
-            <div class="box-img">
-              <a
-                class="link-title"
-                href="https://fergsosa.github.io/eleventy-blog-started/"
-                target="_blank"
-              >
-                <b data-section="proyecto" data-value="title-4">Blog</b>
-
-                <p data-section="proyecto" data-value="p-4">
-                  Blog Markdown <span> Eleventy | Nunjucks </span>
-                </p>
-              </a>
-            </div>
-            <div class="box-img">
+            <div class="box-img bg-theme-fs">
               <a
                 class="link-title"
                 href="https://marketplace.visualstudio.com/items?itemName=cod-fs.theme-italic-fs"
@@ -550,7 +495,7 @@
                 </p>
               </a>
             </div>
-            <div class="box-img">
+            <div class="box-img bg-crud">
               <a
                 class="link-title"
                 href="https://fergsosa.github.io/react-app-crud"
@@ -560,6 +505,61 @@
 
                 <p data-section="proyecto" data-value="p-6">
                   Router/Context/Reducers/Redux <span>React</span>
+                </p>
+              </a>
+            </div>
+            <div class="box-img bg-tarjeta-compra">
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/react-app-tarjeta_de_compra/"
+                target="_blank"
+              >
+                <b data-section="proyecto" data-value="title-3"
+                  >Shopping cart</b
+                >
+
+                <p data-section="proyecto" data-value="p-3">
+                  Loading product cart <span> React | Tailwind </span>
+                </p>
+              </a>
+            </div>
+            <div class="box-img bg-blog">
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/eleventy-blog-started/"
+                target="_blank"
+              >
+                <b data-section="proyecto" data-value="title-4">Blog</b>
+
+                <p data-section="proyecto" data-value="p-4">
+                  Blog Markdown <span> Eleventy | Nunjucks </span>
+                </p>
+              </a>
+            </div>
+            <div class="box-img bg-ajax">
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/Incluir-html-AJAX/"
+                target="_blank"
+              >
+                <b data-section="proyecto" data-value="title-2">Simple Page</b>
+
+                <p data-section="proyecto" data-value="p-2">
+                  Integrating HTML with AJAX <span>HTML | CSS | JS</span>
+                </p>
+              </a>
+            </div>
+            <div class="box-img bg-sliders">
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/Slider-Efectos-Series/"
+                target="_blank"
+              >
+                <b data-section="proyecto" data-value="title-1"
+                  >Slider Effect</b
+                >
+                <p data-section="proyecto" data-value="p-1">
+                  Slider details/automatic <span>HTML | CSS | JS</span>
                 </p>
               </a>
             </div>
