--- a/index.html
+++ b/index.html
@@ -277,6 +277,32 @@
       />
     </div>
 
+    <div class="home-bg-puntos">
+      <svg
+        class="bg-puntos"
+        style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px"
+      >
+        <pattern
+          id="pattern-1:rb:"
+          x="4"
+          y="2"
+          width="24"
+          height="24"
+          patternUnits="userSpaceOnUse"
+          patternTransform="translate(-0.5,-0.5)"
+        >
+          <circle cx="0.5" cy="0.5" r="0.5" fill="var(--bg-puntos)"></circle>
+        </pattern>
+        <rect
+          x="0"
+          y="0"
+          width="100%"
+          height="100%"
+          fill="url(#pattern-1:rb:)"
+        ></rect>
+      </svg>
+    </div>
+
     <main>
       <section id="inicio" class="home" data-scroll-spy>
         <div class="home-box container">
