--- a/index.html
+++ b/index.html
@@ -8,16 +8,6 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    /> -->
-
-    <!-- <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"
-    ></script> -->
-
     <script src="script.js" type="module"></script>
     <script>
       // (function () {
@@ -69,15 +59,11 @@
             <img src="assets/icon-moon.svg" alt="light" />
           </button>
 
-          <div class="flags-item first-item" data-language="es" title="Idioma">
-            <img
-              class="flags-img first-img"
-              src="assets/icon/bandera-es.svg"
-              alt="es"
-            />
+          <div class="flags-item" data-language="es" title="español">
+            <img src="assets/icon/bandera-es.svg" alt="es" />
           </div>
-          <div class="flags-item" data-language="en">
-            <img class="flags-img" src="assets/icon/bandera-gb.svg" alt="en" />
+          <div class="flags-item" data-language="en" title="ingles">
+            <img src="assets/icon/bandera-gb.svg" alt="en" />
           </div>
         </div>
       </div>
@@ -270,16 +256,11 @@
     </section>
 
     <div class="home-img-hero">
-      <img
-        class="home-logo-hero"
-        src="assets/logo-hero-light.svg"
-        alt="logo-hero"
-      />
+      <img src="assets/logo-hero-light.svg" alt="logo-hero" />
     </div>
 
     <div class="home-bg-puntos">
       <svg
-        class="bg-puntos"
         style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px"
       >
         <pattern
