--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Fernando Sosa</title>
     <link rel="icon" href="assets/icono-page.ico" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
 
     <script src="script.js" type="module"></script>
     <script>
